# ceridwen

./: .gitignore  Cargo.toml  LICENSE.md  PROJECTPLANNING.md  README.md
admin/: Cargo.toml
admin/src/: main.rs
ceridwen/: Cargo.toml
ceridwen/src/: data_file.rs  error.rs  lib.rs  page.rs  percentage.rs  search_result.rs  text_tools.rs
ceridwen/src/config/: mod.rs
ceridwen/src/index/: mod.rs  page_index.rs  search.rs  word_index.rs
ceridwen/src/index_sled/: mod.rs
crawler/: Cargo.toml
crawler/src/: error.rs  main.rs  robots_text.rs  web_client.rs
crawler/src/ingesters/: mod.rs  rss_ingester.rs  wikipedia.rs
init/: Cargo.toml
init/src/: main.rs
logo/: README.md
resources/static/css/: core.css
resources/static/scripts/: index.js
resources/templates/: index.html
server/: Cargo.toml  build.rs
server/resources/static/: index.html
server/resources/static/css/: core.css
server/resources/static/scripts/: index.js
server/resources/templates/: header.html  search.html
server/src/: error.rs  main.rs
src/: error.rs  main.rs
src/config/: mod.rs
src/crawler/: mod.rs  robots_text.rs  web_client.rs
src/crawler/ingesters/: mod.rs  rss_ingester.rs  wikipedia.rs
src/data/: mod.rs
src/index_sled/: mod.rs
src/server/: mod.rs
src/utils/: mod.rs  percentage.rs
