[package]
name = "ceridwen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
resolver = "2"

[build-dependencies]
walkdir = "2.1"
ureq = "2.9"

# [workspace]
# members = [
#     "admin",
#     "ceridwen",
#     "crawler",
#     "init",
#     "server",
# ]


[dependencies]
log = "0.4"
log4rs = {version="1.3.0", features=["rolling_file_appender"]}
toml = "0.8.8"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
time = {version="0.3.31", features = ["serde", "parsing", "formatting", "macros"]}
home = "0.5.9"
url = {version = "2.5.0", features=["serde"]}
tokio = { version = "1", features = ["full"] }
sled = "0.34"
serde_json = "1.0.116"
bytes = "1.5"
rss = "2.0.7"
reqwest = "0.12.2"
humansize = "2"
actix-web = "4"
actix-files = "0.6"
tera = { version = "1.16.1", default-features = false}

# reading the wikipedia archive
bzip2 = "0.4.4"
quick-xml = "0.31.0"

# channels
flume = {version="0.11.0"}
anyhow = "1.0" # Flume returns anyhow errors in some places