[package]
name = "ceridwen-admin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ceridwen = {path = "../ceridwen"}

log = "0.4"
env_logger = "0.11"
time = {version="0.3.31", features = ["serde", "parsing", "formatting", "macros"]}
tokio = { version = "1", features = ["full"] }
clap = { version = "4.3", features = ["env", "derive"] }