[package]
name = "ceridwen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
toml = "0.8.8"
serde = {version = "1.0", features = ["derive"]}
thiserror = "1.0"
time = {version="0.3.31", features = ["serde", "parsing"]}
home = "0.5.9"
url = {version = "2.5.0", features=["serde"]}
sha3 = "0.10.8"
hex = "0.4.3"
tokio = { version = "1", features = ["full"] }

sled = "0.34"
serde_json = "1.0.116"