[package]
name = "ceridwen-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ceridwen = {path = "../ceridwen"}

log = "0.4"
env_logger = "0.11"
time = {version="0.3.31", features = ["serde"]}
tokio = { version = "1", features = ["full"] }
url = "2.5.0"
reqwest = "0.11.23"
bytes = "1.5"
rss = "2.0.7"