[package]
name = "ceridwen-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[build-dependencies]
walkdir = "2.1"
ureq = "2.9"

[dependencies]
ceridwen = {path = "../ceridwen"}

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
actix-web = "4"
actix-files = "0.6"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
mime = "0.3.17"
tera = { version = "1.16.1", default-features = false}